# grade-o-matic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.sqlx/: query-03e0e1606773fcefcf325ed73225f637eb29599a4555170aa2475153e7f8043a.json  query-12d3a6398cb4bb51a4e30afb31b6591f1f15f239a92cc6638cf953f527e7bdd2.json  query-1505133af6755eb6bee21be535a9dc86274f8d128c03b582be7b81cb98a9977f.json  query-1b9fb6639086e64da32a19568b80c55b56aba4f5d92ef8f84ee03e7c102e5c13.json  query-2678844800d8372fe70e3fa858d42a9e4c6bf1bc1426e38a5219f8f51adeeaeb.json  query-3ba6ad87738bb7c648ff3a28826256890fa2a38f53e2bcb363568f1e225c70fe.json  query-4715f9c2dd558d34aa4bebf4d2422ced72fa81b4974ed91e21520cdc912a7917.json  query-667179094a09bfe50ce02ae49560529984e7ead18635f5b85a85efb4f3859940.json  query-6c7902e6b3366a0d0dd8e208e2a525d3779d2fd8a571a5fdd05f0c8f644c1792.json  query-8c13f7b2acbfef7fc4c20d694f36b8a4c6ffe55459ff75a453c1dd35aafcd50c.json  query-e2de17da22a4fd148780c12ecfefcca02932647add4b027135a9e32f2330282c.json
apps/grader/: Cargo.toml
apps/grader/src/: main.rs  poll.rs
apps/libgrader/: Cargo.toml
apps/libgrader/src/: domains.rs  lib.rs
apps/libgrader/src/common/: bootstrap.rs  config.rs  dto.rs  error.rs  multipart_helper.rs
apps/libgrader/src/domains/: assignments.rs  classes.rs  device.rs  file.rs
apps/libgrader/src/domains/assignments/domain/: model.rs  repository.rs  service.rs
apps/libgrader/src/domains/assignments/dto/: assignment_dto.rs
apps/libgrader/src/domains/assignments/infra/: impl_repository.rs  impl_service.rs
apps/libgrader/src/domains/auth/api/: routes.rs
apps/libgrader/src/domains/class_memberships/api/: handlers.rs
apps/libgrader/src/domains/class_memberships/domain/: repository.rs
apps/libgrader/src/domains/class_memberships/infra/: impl_service.rs
apps/libgrader/src/domains/classes/api/: routes.rs
apps/libgrader/src/domains/classes/domain/: model.rs
apps/libgrader/src/domains/classes/dto/: class_dto.rs
apps/libgrader/src/domains/classes/infra/: impl_repository.rs
apps/libgrader/src/domains/device/domain/: model.rs
apps/libgrader/src/domains/device/dto/: device_dto.rs
apps/libgrader/src/domains/device/infra/: impl_repository.rs
apps/libgrader/src/domains/file/api/: routes.rs
apps/libgrader/src/domains/file/domain/: repository.rs  service.rs
apps/libgrader/src/domains/file/infra/: impl_repository.rs  impl_service.rs
apps/libgrader/src/domains/user/api/: routes.rs
apps/libgrader/src/domains/user/domain/: service.rs
apps/libgrader/src/domains/user/infra/: impl_repository.rs  impl_service.rs
apps/libgrader/src/grading/: sandbox.rs
apps/web/: Cargo.toml
apps/web/db-seed/: seed.sql
apps/web/migrations/: 20260227213811_create_users_tables.sql  20260228000541_create_assignment_table.sql  20260304174056_alter_assignment_add_points.sql  20260304195500_create_assignment_attachments.sql  20260304200500_alter_uploaded_files_content_type_length.sql  20260308130000_create_grading_jobs.sql  20260316190000_add_assignment_deadline_type.sql  20260317193000_create_assignment_student_extensions.sql
apps/web/scss/: _base.scss  _variables.scss  app.scss
apps/web/src/: common.rs  domains.rs  main.rs
apps/web/templates/: login.html
apps/web/tests/: assignments.rs  auth.rs  class_memberships.rs  devices.rs  test_config.rs  test_hash_util.rs  test_helpers.rs
assets/public/: grade-o-matic.min.css  grade-o-matic.min.css.map
db-seed/: seed.sql
docker/: Dockerfile  docker-compose-postgres.yml  docker-compose.yml
docs/: frontend-utility-cheatsheet.md
migrations/: 20260227213811_create_users_tables.sql  20260302201310_alter_class_add_owner_and_term.sql  20260302201953_alter_user_add_role_and_class.sql  20260302223000_convert_roles_to_postgres_enums.sql  20260304174056_alter_class_add_points.sql
scss/: _base.scss  _components.scss  _utilities.scss  _variables.scss
src/: app.rs  config_test.rs  domains.rs  lib.rs  main.rs
src/common/: app_state.rs  bootstrap.rs  config.rs  dto.rs  error.rs  hash_util.rs  jwt.rs  multipart_helper.rs  opentelemetry.rs  ts_format.rs
src/domains/: assignments.rs  auth.rs  class_memberships.rs  classes.rs  file.rs  user.rs
src/web/: assignments.rs  handlers.rs  instructors.rs  mod.rs  routes.rs  students.rs
src/web/htmx/: assignments.rs
src/web/view_models/: assignments_vm.rs  mod.rs
templates/: index.html  login.html
templates/admin/: users_new.html
templates/assignments/: _attachments_panel.html  _row.html  _status_badge.html  create_assignment.html  detail.html  form.html  index.html  student_index.html
templates/classes/: class_detail.html  create_class.html  index.html  student_index.html
templates/instructors/: index.html
templates/layouts/: base.html
templates/partials/: empty_state.html
tests/: classes.rs  test_assets_routes.rs  test_auth_routes.rs  test_config.rs  test_device_routes.rs  test_hash_util.rs  test_helpers.rs  test_user_routes.rs  users.rs
tests/domains/assignments/: test_assignment_routes.rs  test_assignments_service.rs
(+93 files in other folders)
