[workspace]
resolver = "3"
members = [
    "apps/web",
    "apps/grader",
    "apps/libgrader",
]

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
env_filter = "1.0.0"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
minijinja = { version = "2.12.0", features = ["loader"] }
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["http-proto"] }
opentelemetry_sdk = "0.31.0"
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_dto_mapper_derive = "0.1.1"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "signal", "process"] }
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry", "std", "fmt", "chrono"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
